--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1224,4 +1224,26 @@ button.xui-removeImageButton{
 	margin-right: 0px!important;
 }
 
+/*活动的图标*/
+.wui-i-time > div,.wui-i-prize > div{
+	height: 35px;
+	line-height: 35px;
+	float: left;
+}
+.xui-sprite-timerange{
+	background: url('/static_v2/img/m_sprite.png') no-repeat;
+	background-position: 0 5px;
+	display: block;
+	height: 35px;
+	width: 26px;
+	float: left;
+}
+.xui-sprite-prize{
+	background: url('/static_v2/img/m_sprite.png') no-repeat;
+	background-position: -40px 5px;
+	display: block;
+	height: 35px;
+	width: 26px;
+	float: left;
+}
 
