--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -26,7 +26,8 @@
         <link type="text/css" rel="stylesheet" href="/termite_static/v4/css/webapp_default.css">
         <link type="text/css" rel="stylesheet" href="/termite_static/v4/css/widget.css">  
         <link type="text/css" rel="stylesheet" href="/termite_static/v4/css/app_widget.css">  
-        <link type="text/css" rel="stylesheet" href="/termite_static/v4/css/idangerous.swiper.css">        
+        <link type="text/css" rel="stylesheet" href="/termite_static/v4/css/idangerous.swiper.css">
+        <link type="text/css" rel="stylesheet" href="/static_v2/css/termite_workbench.css">
         <!-- *end_prunt_task* -->
 
 
