--- a/weapp/termite2/templates/termite2/wepage_design_page.html
+++ b/weapp/termite2/templates/termite2/wepage_design_page.html
@@ -10,6 +10,7 @@
 		<link type="text/css" rel="stylesheet" href="/termite_static/v4/css/app_widget.css">
 		<link type="text/css" rel="stylesheet" href="/termite_static/v4/css/idangerous.swiper.css">
 		<link type="text/css" rel="stylesheet" href="/termite_static/css/design.css">
+		<link type="text/css" rel="stylesheet" href="/static_v2/css/termite_workbench.css">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
