--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -1,10 +1,12 @@
 {% extends "content_base_v2.html" %}
 {% load apps_filter %}
 {% block css %}
+    <style>
     .tl.pl25 img{
     	height: 60px;
     	width: 60px;
     }
+    </style>
 {% endblock %}
 {% block content-panel %}
 <div class="xui-surveyParticipancesAppPage xui-appPage-commonStyle">
