--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/integral_introduction.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/integral_introduction.html
@@ -32,7 +32,7 @@
     {% if integral_strategy_setting.buy_award_count_for_buyer %}
     <p class="pt10">
         <p class="em85 c3">购买商品积分</p>
-        <p class="c65 em8 pt5">微信店铺购物，你每成功交易的一笔订单可获得({{ integral_strategy_setting.buy_award_count_for_buyer }}+{{ integral_strategy_setting.order_money_percentage_for_each_buy }}%*订单支付金额)积分。</p>
+        <p class="c65 em8 pt5">微信店铺购物，你每成功交易的一笔订单可获得({{ integral_strategy_setting.buy_award_count_for_buyer }}+{{ integral_strategy_setting.order_money_percentage_for_each_buy }}*订单支付金额)积分。</p>
     </p>
     {% endif %}
     {% if integral_strategy_setting.buy_via_shared_url_increase_count_for_author %}
