--- a/weapp/apps/customerized_apps/feedback/templates/editor/feedbacks.html
+++ b/weapp/apps/customerized_apps/feedback/templates/editor/feedbacks.html
@@ -15,7 +15,7 @@
 			<div class="xui-col disTc">
 				<div class="xui-i-item">
 					<label class="">用户名：</label>
-					<input type="text" class="form-control" id="username" name="username" value="" />
+					<input type="text" class="form-control" id="participant_name" name="participant_name" value="" />
 				</div>
 			</div>
 			<div class="xui-col disTc">
@@ -67,7 +67,7 @@
 			<div class="xui-col disTc">
 				<div class="xui-i-item">
 					<label class="">手机：</label>
-					<input type="text" class="form-control" id="tel" name="tel" value="" />
+					<input type="text" class="form-control" id="phone" name="phone" value="" />
 				</div>
 			</div>
 			<div class="xui-col disTc">
@@ -165,21 +165,21 @@
 <script type="text/javascript">
 $(document).ready(function() {
 	$('.xa-search').click(function(event) {
-		var username = $.trim($('[name="username"]').val());
+		var participant_name = $.trim($('[name="participant_name"]').val());
 		var feedback_type = $.trim($('[name="feedback_type"]').val());
 		var startTime = $.trim($('[name="start_time"]').val());
 		var endTime = $.trim($('[name="end_time"]').val());
 		var name = $.trim($('[name="name"]').val());
-		var tel = $.trim($('[name="tel"]').val());
+		var phone = $.trim($('[name="phone"]').val());
 		var qq = $.trim($('[name="qq"]').val());
 		var table = $('[data-ui-role="advanced-table"]').data('view');
 		table.reload({
-			username: username,
+			participant_name: participant_name,
 			feedback_type: feedback_type,
 			start_time: startTime,
 			end_time: endTime,
 			name: name,
-			tel: tel,
+			phone: phone,
 			qq: qq
 		}, {
 			emptyDataHint: '没有符合条件的数据'
@@ -187,11 +187,11 @@ $(document).ready(function() {
 	});
 	
 	$('.xa-reset').click(function(event) {
-		$('[name="username"]').val('');
+		$('[name="participant_name"]').val('');
 		$('[name="feedback_type"]').val('-1');
 		$('[name="start_time"]').val('');
 		$('[name="end_time"]').val('');
-		$('[name="tel"]').val('');
+		$('[name="phone"]').val('');
 		$('[name="name"]').val('');
 		$('[name="qq"]').val('');
 	});
