--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -267,3 +267,23 @@
     width: 100%;
     border: none;
 }
+/*活动的图标*/
+.wui-i-time,.wui-i-prize{
+	margin-top: 9px;
+}
+.xui-sprite-timerange{
+	background: url('/static_v2/img/m_sprite.png') no-repeat;
+	background-position: 0 5px;
+	display: block;
+	height: 35px;
+	width: 30px;
+	float: left;
+}
+.xui-sprite-prize{
+	background: url('/static_v2/img/m_sprite.png') no-repeat;
+	background-position: -40px 5px;
+	display: block;
+	height: 35px;
+	width: 30px;
+	float: left;
+}
