--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -272,7 +272,7 @@
 	margin-top: 9px;
 }
 .xui-sprite-timerange{
-	background: url('/static_v2/img/m_sprite.png') no-repeat;
+	background: url('/termite_static/img/m_sprite.png') no-repeat;
 	background-position: 0 5px;
 	display: block;
 	height: 35px;
@@ -280,7 +280,7 @@
 	float: left;
 }
 .xui-sprite-prize {
-	background: url('/static_v2/img/m_sprite.png') no-repeat;
+	background: url('/termite_static/img/m_sprite.png') no-repeat;
 	background-position: -40px 5px;
 	display: block;
 	height: 35px;
