--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -313,6 +313,8 @@
                     }
                     $submitButtonContainer.show();
                 }
+                console.log("!!!!!!!!!!!!!!!!!!");
+                console.log(W.isPC,"W.isPC");
                 if (W.isPC){
                     $('.xa-submitTermite').unbind('click');
                 }
